Use linear layout from constraint to contain fields (edit task)

--- a/app/src/main/res/layout/activity_edit_task.xml
+++ b/app/src/main/res/layout/activity_edit_task.xml
@@ -22,16 +22,15 @@
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_edit_task_name"
+                android:layout_weight="1"
                 style="@style/TextInputLayout"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/input_task_name">
@@ -45,9 +44,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_edit_task_date_created"
                 style="@style/TextInputLayout"
-                app:layout_constraintTop_toBottomOf="@id/til_edit_task_name"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/input_date_created">
@@ -64,9 +61,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_edit_task_notes"
                 style="@style/TextInputLayout"
-                app:layout_constraintTop_toBottomOf="@id/til_edit_task_date_created"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/input_task_notes">
@@ -76,7 +71,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </com.google.android.material.textfield.TextInputLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
     </ScrollView>
 
     <com.google.android.material.button.MaterialButton
