--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -40,6 +40,7 @@
 
     <!-- Text Input Layout -->
     <style name="TextInputLayout">
+        <item name="android:theme">@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense</item>
         <item name="android:layout_marginStart">15dp</item>
         <item name="android:layout_marginEnd">15dp</item>
         <item name="android:layout_marginBottom">5dp</item>
