--- a/app/src/main/res/layout/activity_edit_task.xml
+++ b/app/src/main/res/layout/activity_edit_task.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.activity.EditTaskActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/tb_edit_task"
+        android:id="@+id/toolbar"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,6 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_edit_task_name"
                 android:layout_weight="1"
                 style="@style/TextInputLayout"
                 android:layout_width="match_parent"
@@ -36,13 +35,12 @@
                 android:hint="@string/input_task_name">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tiet_edit_task_name"
+                    android:id="@+id/inputName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_edit_task_date_created"
                 style="@style/TextInputLayout"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
@@ -50,7 +48,7 @@
                 android:hint="@string/input_task_date_created">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tiet_edit_task_date_created"
+                    android:id="@+id/inputDateCreated"
                     android:inputType="none"
                     android:focusable="false"
                     android:alpha="0.5"
@@ -59,7 +57,6 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_edit_task_notes"
                 style="@style/TextInputLayout"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
@@ -67,7 +64,7 @@
                 android:hint="@string/input_task_notes">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tiet_edit_task_notes"
+                    android:id="@+id/inputNotes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </com.google.android.material.textfield.TextInputLayout>
@@ -75,8 +72,8 @@
     </ScrollView>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_save_task"
-        app:layout_constraintBottom_toTopOf="@id/btn_delete_task"
+        android:id="@+id/saveTask"
+        app:layout_constraintBottom_toTopOf="@id/deleteTask"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="2dp"
@@ -87,7 +84,7 @@
         android:layout_height="wrap_content"/>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_delete_task"
+        android:id="@+id/deleteTask"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
