--- a/app/src/main/res/layout/activity_completed_task.xml
+++ b/app/src/main/res/layout/activity_completed_task.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.activity.CompletedTaskActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/tb_completed_task"
+        android:id="@+id/toolbar"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,38 +17,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_empty_completed_tasks_container"
+    <LinearLayout
+        android:id="@+id/noTaskIndicator"
         android:layout_marginBottom="70dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/iv_empty_completed_tasks_photo"
             android:src="@drawable/illustration_empty_completed_tasks"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_gravity="center"
             style="@style/IllustrationEmptyPhoto"/>
 
         <TextView
-            android:id="@+id/tv_empty_completed_tasks_text"
             android:text="@string/illustration_empty_completed_tasks"
             style="@style/IllustrationEmptyText"
-            app:layout_constraintTop_toBottomOf="@id/iv_empty_completed_tasks_photo"
-            app:layout_constraintEnd_toEndOf="@id/iv_empty_completed_tasks_photo"
-            app:layout_constraintStart_toStartOf="@id/iv_empty_completed_tasks_photo"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_completed_task"
+        android:id="@+id/recyclerView"
         android:layout_marginTop="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
