--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.activity.SettingsActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/tb_settings"
+        android:id="@+id/toolbar"
         app:title="@string/toolbar_settings"
         app:titleTextAppearance="@style/ToolbarText"
         app:layout_constraintTop_toTopOf="parent"
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"/>
 
     <FrameLayout
-        android:id="@+id/container_settings"
+        android:id="@+id/settingsContainer"
         android:layout_marginTop="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
