--- a/app/src/main/res/menu/main_options.xml
+++ b/app/src/main/res/menu/main_options.xml
@@ -42,9 +42,7 @@
 
     <item
         android:id="@+id/item_completed_tasks"
-        android:title="@string/menu_completed_tasks"
-        android:icon="@drawable/completed_tasks"
-        app:showAsAction="ifRoom"/>
+        android:title="@string/menu_completed_tasks"/>
 
     <item
         android:id="@+id/options_filter"
