--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -2,81 +2,103 @@
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/item_task"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/itemTaskCard"
     app:cardUseCompatPadding="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     style="@style/TaskItemCard">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
+    <LinearLayout
+        android:orientation="vertical"
+        android:paddingStart="25dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.google.android.material.checkbox.MaterialCheckBox
-            android:id="@+id/item_task_check_box"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <ImageView
-            android:id="@+id/item_task_date_created_image"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:src="@drawable/date"
-            style="@style/TaskItemDateCreatedImage"/>
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/item_task_date_created_text"
-            app:layout_constraintTop_toTopOf="@id/item_task_date_created_image"
-            app:layout_constraintStart_toEndOf="@id/item_task_date_created_image"
-            app:layout_constraintBottom_toBottomOf="@id/item_task_date_created_image"
-            android:text="@string/placeholder_item_task_date_created"
-            style="@style/TaskItemDateCreatedText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/item_task_name"
-            app:layout_constraintTop_toTopOf="@id/item_task_date_created_image"
-            app:layout_constraintStart_toStartOf="@id/item_task_date_created_image"
-            android:text="@string/placeholder_item_task_name"
-            style="@style/TaskItemName"
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/itemTaskName"
+                android:text="@string/placeholder_item_task_name"
+                android:layout_weight="1"
+                style="@style/TaskItemName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+
+            <ImageView
+                android:id="@+id/itemTaskMoreOptions"
+                android:focusable="true"
+                android:clickable="true"
+                android:src="@drawable/more"
+                android:layout_width="28dp"
+                android:layout_height="28dp"/>
+        </LinearLayout>
 
         <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/item_task_divider"
-            app:layout_constraintTop_toBottomOf="@id/item_task_name"
-            style="@style/TaskItemDivider"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/item_task_name"
-            android:layout_marginTop="13dp"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="15dp" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/item_task_notes"
-            app:layout_constraintTop_toBottomOf="@id/item_task_divider"
-            app:layout_constraintStart_toStartOf="@id/item_task_divider"
-            android:text="@string/placeholder_item_task_notes"
-            android:justificationMode="inter_word"
-            style="@style/TaskItemNotes"
+            android:id="@+id/itemTaskDivider"
+            android:layout_marginTop="5dp"
+            app:dividerThickness="2dp"
+            app:dividerColor="@color/onyx"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_marginTop="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/itemTaskDateCreatedIMG"
+                android:src="@drawable/date"
+                app:tint="@color/onyx"
+                style="@style/TaskItemDateCreatedImage"
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/itemTaskDateCreated"
+                android:text="@string/placeholder_item_task_date_created"
+                style="@style/TaskItemDateCreatedText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/itemTaskPriorityIMG"
+                android:src="@drawable/priority"
+                app:tint="@color/onyx"
+                style="@style/TaskItemDateCreatedImage"
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/itemTaskPriority"
+                android:text="@string/placeholder_item_task_priority"
+                style="@style/TaskItemDateCreatedText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/item_task_last_edited"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/item_task_notes"
+            android:id="@+id/itemTaskLastEdited"
+            android:layout_gravity="right"
             android:text="@string/placeholder_item_task_last_edited"
             style="@style/TaskItemLastEdited"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="wrap_content"
+            tools:ignore="RtlHardcoded" />
+    </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
