--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -57,7 +57,7 @@
     </style>
     <style name="TaskItemDateCreatedText">
         <item name="android:textColor">@color/onyx</item>
-        <item name="fontFamily">sans-serif-medium</item>
+        <item name="fontFamily">sans-serif</item>
         <item name="android:textSize">13sp</item>
         <item name="android:layout_marginStart">5dp</item>
     </style>
