--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -52,18 +52,18 @@
     </style>
     <style name="TaskItemDateCreatedImage">
         <item name="tint">@color/onyx</item>
-        <item name="android:layout_height">18dp</item>
-        <item name="android:layout_width">18dp</item>
+        <item name="android:layout_height">15dp</item>
+        <item name="android:layout_width">15dp</item>
     </style>
     <style name="TaskItemDateCreatedText">
         <item name="android:textColor">@color/onyx</item>
-        <item name="fontFamily">sans-serif</item>
-        <item name="android:textSize">13sp</item>
+        <item name="fontFamily">sans-serif-medium</item>
+        <item name="android:textSize">10sp</item>
         <item name="android:layout_marginStart">5dp</item>
     </style>
     <style name="TaskItemName">
         <item name="android:textColor">@color/onyx</item>
-        <item name="android:textSize">25sp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:fontFamily">sans-serif-black</item>
     </style>
     <style name="TaskItemDivider">
